# imagica

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build_exe.py  build_exe_simple.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  启动AI图像生成器.bat  打包exe.bat
config/: __init__.py  constants.py
docs/: DEVELOPMENT.md  REFACTORING_SUMMARY.md
release/assets/: .gitkeep
tests/: __init__.py  test_config.py  test_validators.py
ui/: __init__.py  components.py  fullscreen_preview.py  image_preview.py  main_window.py  widgets.py
utils/: __init__.py  config_manager.py  exceptions.py  image_utils.py  logger.py  validators.py
